# TCP-Sockets

TCPClient/: CMakeCache.txt  CMakeLists.txt  Makefile  TCPClient  cmake_install.cmake
TCPServer/: TCPServer
